# openmp_tutorials

./: CMakeLists.txt  Notes.txt  Summary.txt  hello_world.cpp  integration.cpp  integration_parallelized.cpp  integration_parallelized_mutex.cpp  simple_example.cpp
excercises/: linked_list.cpp  linked_list_tasks.cpp  mandel.cpp  producer_consumer.cpp
experiments/: ordered_vector.cpp
integration/: 2.1_integration_parallelized_mutex.cpp  2_integration_parallelized.cpp  3_integration_parallelized_false_sharing.cpp  4_integration_parallelized_critical.cpp  5_integration_reduction.cpp
integration_false_sharing/: 3_integration_parallelized_false_sharing.cpp
pi_mc/: pi_mc.cpp  random.cpp
